; ModuleID = '/home/carl/AnghaBench/torch7/lib/TH/extr_THAtomic.c_THAtomicGetLong.c'
source_filename = "/home/carl/AnghaBench/torch7/lib/TH/extr_THAtomic.c_THAtomicGetLong.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @THAtomicGetLong(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca i64, align 8
  store i64* %0, i64** %2, align 8
  br label %4

4:                                                ; preds = %7, %1
  %5 = load i64*, i64** %2, align 8
  %6 = load volatile i64, i64* %5, align 8
  store i64 %6, i64* %3, align 8
  br label %7

7:                                                ; preds = %4
  %8 = load i64*, i64** %2, align 8
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* %3, align 8
  %11 = call i32 @THAtomicCompareAndSwapLong(i64* %8, i64 %9, i64 %10)
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  br i1 %13, label %4, label %14

14:                                               ; preds = %7
  %15 = load i64, i64* %3, align 8
  ret i64 %15
}

declare dso_local i32 @THAtomicCompareAndSwapLong(i64*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
